src/test/deca/context/invalid/pierre/objects/callWrongParameters.deca
class A {
    void a(int i, int j) {}
}
{
    A a = new A();
    a.a(1,true);
}
